vbnc/vbnc/tests/Errors/30200-2.vb
Class SomeClass

    Public Delegate Function Foo() As New System.Collections.Generic.List(Of String)
    
End Class